fix button alignment on the project edit tests page

--- a/css/inner/edit-project-settings.less
+++ b/css/inner/edit-project-settings.less
@@ -5,6 +5,12 @@ form.expando {
   }
 }
 
+.spec_form {
+  button {
+    vertical-align: top;
+  }
+}
+
 .select-project-parallelization {
   @selected-border-color: @redLight;
   @focused-border-color: @redLight;
